--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <h1> Draw a curve! i'll find the closest cubic bezier :) </h1>
     (refresh page if it stops working)
     </div>
+    <div style="display: flex">
+    <button id="refreshcanvas">clear canvas</button><br>
+    <button id="refreshsvg">clear svg</button><br>
+    </div>
   </body>
 </html>
